[tool.poetry]
name = "commonroad-route-planner"
version = "2022.3"
description = ""
authors = ["Daniel Tar, Edmond Irani Liu <commonroad@lists.lrz.de>"]
license = "BSD"
readme = "README.md"
packages = [{include = "commonroad_route_planner"}]

[tool.poetry.dependencies]
python = "^3.8"
commonroad-io = ">=2022.2"
networkx = ">=2.4"
numpy = ">=1.17.4"
shapely = ">=1.6.4.post2"
matplotlib = ">=3.1.2"
commonroad-drivability-checker = "^2023.1"


[tool.poetry.group.tutorial]
optional = true

[tool.poetry.group.tutorial.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
filter_files = true
line_length = 88